avcodec/ac3dec: add a flush callback for the ac3 and eac3 decoders

Fixes ticket #10732

Signed-off-by: James Almer <jamrial@gmail.com>